# task_management

./: docker-compose.yml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/modules/dones/: api.py  model.py  schema.py  service.py
api/modules/tasks/: api.py  model.py  schema.py  service.py
web/: Dockerfile
web/task_vue/: README.md  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1711587570376-7765c0c1f0ac5.mjs
web/task_vue/src/: App.vue  main.ts
web/task_vue/src/components/: BaseSection.vue  DynamicRadio.vue  DynamicSelect.vue  Emit.vue  LifeCycle.vue  OneInfo.vue  OneMember.vue  OneSection.vue  ReactiveFunc.vue  Ref.vue  Slot.vue  VBind.vue  VFor.vue  VIf.vue  VModel.vue  VOn.vue  Watcher.vue  WithModel.vue  interface.ts
web/task_vue/src/stores/: counter.ts
